@@ -125,7 +125,6 @@ class Conftest(object):
         self._onimport = onimport
         self._conftestpath2mod = {}
         self._confcutdir = confcutdir
-        self._md5cache = {}
 
     def setinitial(self, args):
         """ try to find a first anchor path for looking up global values
@@ -179,14 +178,7 @@ class Conftest(object):
                 else:
                     conftestpath = path.join("conftest.py")
                     if conftestpath.check(file=1):
-                        key = conftestpath.computehash()
-                        # XXX logging about conftest loading
-                        if key not in self._md5cache:
-                            clist.append(self.importconftest(conftestpath))
-                            self._md5cache[key] = conftestpath
-                        else:
-                            # use some kind of logging
-                            print ("WARN: not loading %s" % conftestpath)
+                        clist.append(self.importconftest(conftestpath))
                 clist[:0] = self.getconftestmodules(dp)
             self._path2confmods[path] = clist
         # be defensive: avoid changes from caller side to
